changed file structure

--- a/tutorials/pagetwo.html
+++ b/tutorials/pagetwo.html
@@ -2,19 +2,22 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <Title>Webpage Blog Test</Title>
+        <Title>Page Two</Title>
     </head>
 
     <body> 
-       <h1>Welcome to my Blog</h1>
+       <h1>Page Two</h1>
 
        <h2>Part 1 - The Travelling</h2>
 <!--Just as a reminder, Do not use <i> and <b>. <em> and <strong> are important for accessbility -->
-       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enimad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+       <p><a href="https://www.google.com">Lorem ipsum dolor sit amet,</a> consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enimad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     
        <h2>Part 2 - The Disaster</h2>
 
        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+       
+       <!--If a image link is broken it will appear as a broken image icon-->
+       <img src="coffee-bar.jpg" alt="a picture of a coffee bar">
 
        <h2>Part 3 - The Help</h2>
 
