--- a/tutorials/pagetwo.html
+++ b/tutorials/pagetwo.html
@@ -17,7 +17,7 @@
        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
        
        <!--If a image link is broken it will appear as a broken image icon-->
-       <img src="coffee-bar.jpg" alt="a picture of a coffee bar">
+       <img src="./img/coffee-bar.jpg" alt="a picture of a coffee bar" height="250">
 
        <h2>Part 3 - The Help</h2>
 
